--- a/styles.css
+++ b/styles.css
@@ -2,31 +2,47 @@
     margin: 0;
     padding:0;
     font-size:0;
-}
-body{
     list-style: none;
     text-decoration: none;
 }
+
+body{
+    background-color:white;
+}
+
 header{
     height: 90px;
+    display: flex;
+ background-color: brown;
+              
 }
 nav {
     width: 60px;
+   
+       
 }
 
 ul{
-    margin-top: 0;
-    list-style: none;
+    
     display:flex;
     padding-left: 0;
-    text-align: right;
-    height: 50px;
+    height:90px;
+    
 }
 
 li{
+    list-style:none ;
+    color: black;
+    padding-left: 100px;
+    padding-right:90px;
+    line-height: 90px;
+    font-size: 25px;
+    margin-right: 60px;
+    cursor: pointer;
+    transition: 5s;
     
-    padding-left: 30px;
-    padding-right: 30px;
-    
+}
 
+li:hover{
+    color:white
 }
