--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color:white;
+    background-color:black;
 }
 
 header{
@@ -58,3 +58,61 @@ li:hover{
     width: 100%;
     height: 600px;
 }
+
+#trailer-container {
+    width: 100%;
+    height: 400px;
+    display:flex;
+    justify-content: center;
+
+}
+.content{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.trailer{
+    width: 50%;
+    margin-left:25%;
+}
+#sinopse{
+    width: 50%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 30px;
+}
+.description{
+    color:white;
+    font-size: 19px;
+    width: 70%;
+    
+}
+
+.button{
+    width: 200px;
+    height: 60px;
+    background-color:red;
+    color: white;
+    padding: 8px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 8s;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    margin-top: 25px;
+
+}
+
+.button:hover{
+    background-color: white;
+    color: black;
+}
+
+
