--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ li:hover{
     background-position: 50% 50%;
     background-size: cover;
     width: 100%;
-    height: 600px;
+    height: 380px;
 }
 
 #trailer-container {
@@ -73,20 +73,24 @@ li:hover{
     justify-content: space-between;
 }
 .trailer{
-    width: 50%;
-    margin-left:25%;
+    width: 60%;
+    margin-left:40%;
 }
 #sinopse{
     width: 50%;
+    margin-top: 4%;
     display:flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content:space-between;
     margin-left: 30px;
+    
 }
 .description{
     color:white;
-    font-size: 19px;
+    font-size: 21px;
     width: 70%;
+    line-height: 30px;
+    
     
 }
 
@@ -106,7 +110,8 @@ li:hover{
     font-weight: bold;
     border: none;
     outline: none;
-    margin-top: 25px;
+   margin-bottom: 9%;
+    
 
 }
 
