--- a/styles.css
+++ b/styles.css
@@ -120,4 +120,40 @@ li:hover{
     color: black;
 }
 
+.actor-cards-container{
+    width:100%;
+    display:flex;
+    justify-content:center;
+    margin-top: 50px;
+}
+
+.cards-content{
+    width:90%
+    display:grid;
+    grid-template-columns:repeat(4,1fr);
+    row-gap:20px;
+    column-gap:40px;
+
+}
+
+.card {
+    width: 100%;
+    height:600px;
+    background-size:cover;
+    background-position: 50% 50%;
+    border radius:5px;
+    cursor:pointer;
+    transition:1s;
+    flex-direction:column;
+    justify-content:flex-end;
+    padding:0 0 20px 10px;
+    color: white;
+    font-size:17px;
+    font-family:
+
+}
+
+.card:hover{
+    transform: scale(1.02);
+}
 
