--- a/styles.css
+++ b/styles.css
@@ -128,20 +128,20 @@ li:hover{
 }
 
 .cards-content{
-    width:90%
-    display:grid;
+    width:100%;
+    display: grid;
     grid-template-columns:repeat(4,1fr);
     row-gap:20px;
-    column-gap:40px;
+    column-gap:20px;
 
 }
 
 .card {
     width: 100%;
-    height:600px;
+    height:200px;
     background-size:cover;
     background-position: 50% 50%;
-    border radius:5px;
+    border-radius:5px;
     cursor:pointer;
     transition:1s;
     flex-direction:column;
@@ -156,4 +156,6 @@ li:hover{
 .card:hover{
     transform: scale(1.02);
 }
+
+
 
