--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,21 @@
 
 body{
     background-color:black;
+    font-family: 'Montserrat', sans-serif;
+   
+    
 }
 
 header{
     height: 90px;
     display: flex;
- background-color:black;
+    background-color:black;
               
 }
+
 nav {
     width: 60px;
-   
-       
+    
 }
 
 ul{
@@ -40,6 +43,7 @@ li{
     margin-right: 100px;
     cursor: pointer;
     transition: 5s;
+    font-family:400;
         
 }
 #logo{
@@ -83,6 +87,7 @@ li:hover{
     flex-direction: column;
     justify-content:space-between;
     margin-left: 30px;
+    font-family:100;
     
 }
 .description{
@@ -102,7 +107,7 @@ li:hover{
     padding: 8px 10px;
     border-radius: 5px;
     cursor: pointer;
-    transition: 8s;
+    transition: 4s;
     font-size: 18px;
     display: flex;
     justify-content: center;
@@ -110,7 +115,8 @@ li:hover{
     font-weight: bold;
     border: none;
     outline: none;
-   margin-bottom: 9%;
+    margin-bottom: 9%;
+    font-family:400;
     
 
 }
@@ -148,8 +154,8 @@ li:hover{
     justify-content:flex-end;
     padding:0 0 20px 10px;
     color: white;
-    font-size:17px;
-    font-family:
+    font-size:19px;
+    font-family:100;
 
 }
 
