--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body{
     background-color:black;
     font-family: 'Montserrat', sans-serif;
-   
+  
     
 }
 
@@ -191,3 +191,45 @@ span{
     align-items: center;
 }
 
+@media(max-width:768px){
+    .footer-navigation{
+        display: block;
+    }
+    nav{
+        display:none;
+    }
+    #banner{
+        background-position: 40%;
+    }
+    #trailer-container{
+        width:100%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+    }
+    .content{
+        width: 95%;
+        display:flex;
+        flex-direction: column;
+   }
+   .trailer{
+    width: 100%;
+   }
+   #sinopse{
+    width: :95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+   }
+   .description{
+    width: 100%;
+   }
+   .button{
+    width: 100%;
+    margin-top: 30px;
+   }
+   .cards-content{
+    grid-template-columns: 1fr;
+    margin-top: 150px;
+   }
+}
