--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
 body{
     background-color:black;
     font-family: 'Montserrat', sans-serif;
-  
+    margin-right:-5%;
+      
     
 }
 
@@ -60,8 +61,8 @@ li:hover{
     background-position: 50% 50%;
     background-size: cover;
     width: 100%;
-    height: 380px;
-}
+    height: 400px;
+  }
 
 #trailer-container {
     width: 100%;
@@ -88,7 +89,7 @@ li:hover{
     justify-content:space-between;
     margin-left: 30px;
     font-family:100;
-    
+        
 }
 .description{
     color:white;
@@ -145,6 +146,7 @@ li:hover{
 .card {
     width: 100%;
     height:200px;
+    margin-left: 10%;
     background-size:cover;
     background-position: 50% 50%;
     border-radius:5px;
@@ -162,6 +164,7 @@ li:hover{
 .card:hover{
     transform: scale(1.02);
 }
+
 
 footer{
     height: 300px;
