💄 feat: Estilizaçao CSS do formulario

--- a/styles-2.css
+++ b/styles-2.css
@@ -1,2 +1,92 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+body{
+    background-color: aliceblue;
+}
 
+  h1,
+  h2 {
+    font-size: 30px;
+    color: black;
+    margin-bottom: 32px;
+    text-align: center;
+    line-height: 1.2;
+  }
   
+  h1::before {
+    
+    display: block;
+  }
+  
+  h2::before {
+    
+    display: block;
+  }
+  
+  .form {
+    width: 100%;
+    max-width: 512px;
+    font-size: 18px;
+    
+  }
+  
+  .form label,
+  .form input,
+  .form textarea,
+  .form button {
+    display: block;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .form label {
+    color: black
+    line-height: 1;
+    margin-bottom: 8px;
+  }
+  
+  .form input,
+  .form textarea {
+    font: inherit;
+    padding: 13px;
+    margin-bottom: 16px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    transition: border-color, box-shadow 0.2s;
+  }
+  
+  .form textarea {
+    min-height: 208px;
+    resize: vertical;
+  }
+  
+  .form input:hover,
+  .form input:focus,
+  .form textarea:hover,
+  .form textarea:focus {
+    outline: none;
+    border-color: #09d;
+    box-shadow: 0 0 0 3px #4dc8ff;
+  }
+  
+  .form button {
+    display: block;
+    padding: 1rem;
+    background: #0072c4;
+    color:black;
+    font: inherit;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+  
+  .form button:hover,
+  .form button:focus {
+    outline: none;
+    background: #09d;
+  }
