--- a/styles-2.css
+++ b/styles-2.css
@@ -2,35 +2,39 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
   }
 body{
-    background-color: aliceblue;
+    background-color:#B22222;
+    font-family: 'Montserrat', sans-serif;
 }
 
-  h1,
-  h2 {
+  h1 {
     font-size: 30px;
     color: black;
+    margin-top: 20px;
     margin-bottom: 32px;
     text-align: center;
     line-height: 1.2;
-  }
-  
-  h1::before {
+    font-style: bold;
     
-    display: block;
   }
   
-  h2::before {
+ h2{
+    font-size: 50px;
+    color: black;
+    margin-top: 10%;
+    margin-bottom: 200px;
+    text-align: center;
+    font-style: bold;
+ }
     
-    display: block;
-  }
-  
   .form {
     width: 100%;
     max-width: 512px;
     font-size: 18px;
-    
+    margin-left: 40%;
+        
   }
   
   .form label,
@@ -39,11 +43,12 @@ body{
   .form button {
     display: block;
     width: 100%;
-    font-size: 18px;
+    font-size: 20px;
+
   }
   
   .form label {
-    color: black
+    color: black;
     line-height: 1;
     margin-bottom: 8px;
   }
@@ -61,6 +66,7 @@ body{
   .form textarea {
     min-height: 208px;
     resize: vertical;
+  
   }
   
   .form input:hover,
@@ -74,7 +80,7 @@ body{
   
   .form button {
     display: block;
-    padding: 1rem;
+    padding: 16px;
     background: #0072c4;
     color:black;
     font: inherit;
@@ -89,4 +95,15 @@ body{
   .form button:focus {
     outline: none;
     background: #09d;
+  }
+
+
+footer{
+    background-color: black;
+}
+span{
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    align-items: center;
+    font-size:19px ;
   }
