--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,8 @@ li:hover{
     color:red
 }
 
-#banner {
+#banner,
+#banner-reserva {
     background-position: 50% 50%;
     background-size: cover;
     width: 100%;
@@ -135,9 +136,10 @@ li:hover{
 }
 
 .cards-content{
+
     width:100%;
     display: grid;
-    grid-template-columns:repeat(4,1fr);
+    grid-template-columns:repeat(3,1fr);
     row-gap:20px;
     column-gap:20px;
 
