--- a/styles-2.css
+++ b/styles-2.css
@@ -97,10 +97,20 @@ body{
     background: #09d;
   }
 
+.content-fotos{
+    margin-top: 50px;
+    width:100%;
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    row-gap:20px;
+    column-gap:20px;
+    margin-left: 20px;
+    
+  }
 
 footer{
     background-color: black;
-}
+  }
 span{
     color: white;
     font-family: 'Montserrat', sans-serif;
