--- a/styles-2.css
+++ b/styles-2.css
@@ -2,12 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-size:0;
+    list-style: none;
+    text-decoration: none;
   }
+
 body{
     background-color:#ff6768;
     font-family: 'Montserrat', sans-serif;
-}
+    margin-right:-5%;
+  }
 
   h1 {
     font-size: 30px;
